--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,7 +1,7 @@
 // malfunction keyboard 5 6 ^ %
 
 // load fonts
-@import url('//cdn.statically.io/gh/dimaslanjaka/Web-Manajemen/fontawesome-pro/css/all.min.css');
+@import url('//rawcdn.githack.com/dimaslanjaka/Web-Manajemen/0f634f242ff259087c9fe176e8f28ccaebb5c015/css/all.min.css');
 // $fa-font-path: '~@fontawesome/fontawesome-svg-core/webfonts';
 // @import '@fontawesome/fontawesome-svg-core/scss/all';
 
