control font weight of `b` tags

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -128,6 +128,10 @@ b {
   font-family: 'Cera Pro Bold', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 
+b {
+  font-weight: 599 !important;
+}
+
 pre,
 code {
   font-family: 'consolas', 'monaco', 'monospace';
